@@ -235,6 +235,13 @@ static NSString *const kDailyMotionClientSecretKey = @"DailyMotionClientSecret";
                                                          keychainItemName:kKeychainItemName
                                                          resourceBundle:nil] autorelease];
 
+  // During display of the sign-in window, loss and regain of network
+  // connectivity will be reported with the notifications
+  // kGTMOAuth2NetworkLost/kGTMOAuth2NetworkFound
+  //
+  // See the method signInNetworkLost: for an example of handling
+  // the notification.
+
   // Optional: display some html briefly before the sign-in page loads
   NSString *html = @"<html><body><div align=center>Loading sign-in page...</div></body></html>";
   [windowController setInitialHTMLString:html];
